style.css
html, body {
	background-color: black;
	display: flex;
	flex: 1 1 0;
	flex-direction: column;
	align-content: center;
	height: 100%;
	max-width: 100vw;
	overflow: hidden;
}
#intro {
	display: flex;
	background-color: black;
	color: white;
	flex: 1 1;
	flex-direction: column;
	align-content: center;
	justify-content: center;
	height: 100%;
	max-width: 100%;
	max-height: 100%;
}
.intro-container {
	display: flex;
	flex: 1 1 1;
	flex-direction: column;
	align-self: center;
	justify-content: center;
	width: 80%;
	box-shadow: 0px 0px 7px 5px greenyellow;
	font-size: 200%;
	animation: shake 10s;
	animation-iteration-count: infinite;
}
.intro-container p {
	align-self: center;
	margin: 1.5%;
	word-break: break-all;
}
.intro-container:hover, .intro-container:active {
	animation: shake 0.5s;
	animation-iteration-count: infinite;
}
.intro-container-spin-fade {
	animation: fadeOut 2.6s, spin 2.6s both;
	animation-timing-function: ease-in;
}
#main {
	display: none;
	background-color: black;
	flex: 1 1;
	flex-direction: column;
	align-items: center;
	justify-self: center;
	justify-content: space-between;
	max-height: 100%;
	transition: background-color 7.5s;
	animation: fadeIn 7.5s;
}
#cityVideo {
	display: flex;
	flex: 1 1 0;
	align-self: center;
	justify-self: center;
	max-width: 100%;
	max-height: 100%
}
video {
	display: flex;
	flex: 1 1 1;
	align-self: center;
	justify-self: center;
	max-width: 100%;
	max-height: 100%
}
.message-list {
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
	width: 66vw;
}
.message {
	display: flex;
	flex-direction: row;
	justify-content: space-between;
	
}
.nes-balloon {
	display: flex;
	justify-self: center;
	align-self: flex-start;
	width: 90%;
}
#rick {
	display: flex;
	align-self: flex-end;
	margin-bottom: -5%;
	animation: heartbeat 3s ease-in-out infinite both;
}
#morty {
	display: flex;
	align-self: end;
	margin-bottom: -5%;
	animation: heartbeat 3s ease-in-out infinite both;
}
#portfolio {
	display: flex;
	flex-direction: column;
	align-items: flex-start;
	width: 75vw;
}
#linktree {
	display: flex;
	flex: 1 1 1;
	align-self: center;
	width: 90%;
}
.is-success {
	width: 100%;
}
#foot {
	display: flex;
	justify-content: space-evenly;
	width: 90vw;
}
.nes-badge {
	display: flex;
}

@keyframes fadeIn {
	0% { opacity: 0; }
	100% { opacity: 1; }
}

@keyframes fadeOut {
	100% { opacity: 0; }
	0% { opacity: 1; }
}

@keyframes shake {
    0% { transform: translate(1px, 1px) rotate(0deg); }
    10% { transform: translate(-1px, -2px) rotate(-1deg); }
    20% { transform: translate(-3px, 0px) rotate(1deg); }
    30% { transform: translate(3px, 2px) rotate(0deg); }
    40% { transform: translate(1px, -1px) rotate(1deg); }
    50% { transform: translate(-1px, 2px) rotate(-1deg); }
    60% { transform: translate(-3px, 1px) rotate(0deg); }
    70% { transform: translate(3px, 1px) rotate(-1deg); }
    80% { transform: translate(-1px, -1px) rotate(1deg); }
    90% { transform: translate(1px, 2px) rotate(0deg); }
    100% { transform: translate(1px, -2px) rotate(-1deg); }
}
@keyframes spin {
    from {
        transform:rotate(0deg) translateZ(0);
		color: white;    
	}
    to {
        transform:rotate(720deg) translateZ(0);
		color: greenyellow;
    }
}

@keyframes heartbeat {
from {
	-webkit-transform: scale(1);
			transform: scale(1);
	-webkit-transform-origin: center center;
			transform-origin: center center;
	-webkit-animation-timing-function: ease-out;
			animation-timing-function: ease-out;
}
10% {
	-webkit-transform: scale(0.91);
			transform: scale(0.91);
	-webkit-animation-timing-function: ease-in;
			animation-timing-function: ease-in;
}
17% {
	-webkit-transform: scale(0.98);
			transform: scale(0.98);
	-webkit-animation-timing-function: ease-out;
			animation-timing-function: ease-out;
}
33% {
	-webkit-transform: scale(0.87);
			transform: scale(0.87);
	-webkit-animation-timing-function: ease-in;
			animation-timing-function: ease-in;
}
45% {
	-webkit-transform: scale(1);
			transform: scale(1);
	-webkit-animation-timing-function: ease-out;
			animation-timing-function: ease-out;
}
}

